@@ -7,7 +7,7 @@
     <groupId>com.github.abashev</groupId>
     <artifactId>vfs-s3</artifactId>
     <packaging>jar</packaging>
-    <version>4.4-SNAPSHOT</version>
+    <version>17.0.0-SNAPSHOT</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Amazon S3 driver for VFS (Apache Commons Virtual File System)</description>
@@ -32,6 +32,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <test.fork.count>1</test.fork.count>
         <palantir-java-format.version>2.89.0</palantir-java-format.version>
+        <error-prone.version>2.42.0</error-prone.version>
+        <nullaway.version>0.13.1</nullaway.version>
     </properties>
 
     <dependencies>
@@ -115,10 +117,38 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.14.0</version>
                 <configuration>
                     <release>17</release>
                     <encoding>UTF-8</encoding>
+                    <fork>true</fork>
+                    <compilerArgs>
+                        <arg>-XDcompilePolicy=simple</arg>
+                        <arg>--should-stop=ifError=FLOW</arg>
+                        <arg>-Xplugin:ErrorProne -XepOpt:NullAway:AnnotatedPackages=com.github.vfss3</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>com.google.errorprone</groupId>
+                            <artifactId>error_prone_core</artifactId>
+                            <version>${error-prone.version}</version>
+                        </path>
+                        <path>
+                            <groupId>com.uber.nullaway</groupId>
+                            <artifactId>nullaway</artifactId>
+                            <version>${nullaway.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
             <plugin>
@@ -182,8 +212,10 @@
         <profile>
             <id>release</id>
             <properties>
-                <vfs-s3-snapshot-repository>https://oss.sonatype.org/content/repositories/snapshots</vfs-s3-snapshot-repository>
-                <vfs-s3-release-repository>https://oss.sonatype.org/service/local/staging/deploy/maven2</vfs-s3-release-repository>
+                <vfs-s3-snapshot-repository>https://oss.sonatype.org/content/repositories/snapshots
+                </vfs-s3-snapshot-repository>
+                <vfs-s3-release-repository>https://oss.sonatype.org/service/local/staging/deploy/maven2
+                </vfs-s3-release-repository>
             </properties>
             <distributionManagement>
                 <snapshotRepository>
@@ -268,7 +300,8 @@
                                 <configuration>
                                     <minimizeJar>true</minimizeJar>
                                     <transformers>
-                                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                        <transformer
+                                                implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                     </transformers>
                                     <filters>
                                         <filter>
@@ -305,21 +338,32 @@
                                             <pattern>com.amazonaws</pattern>
                                             <shadedPattern>com.github.vfss3.shaded.com.amazonaws</shadedPattern>
                                             <excludes>
-                                                <exclude>com.amazonaws.auth.InstanceProfileCredentialsProvider*</exclude>
+                                                <exclude>com.amazonaws.auth.InstanceProfileCredentialsProvider*
+                                                </exclude>
                                                 <exclude>com.amazonaws.auth.AWSStaticCredentialsProvider</exclude>
                                                 <exclude>com.amazonaws.auth.AWSCredentialsProviderChain</exclude>
                                                 <exclude>com.amazonaws.auth.AWSCredentialsProvider</exclude>
                                                 <exclude>com.amazonaws.auth.DefaultAWSCredentialsProviderChain</exclude>
-                                                <exclude>com.amazonaws.auth.ClasspathPropertiesFileCredentialsProvider</exclude>
+                                                <exclude>com.amazonaws.auth.ClasspathPropertiesFileCredentialsProvider
+                                                </exclude>
                                                 <exclude>com.amazonaws.auth.AWSSessionCredentialsProvider</exclude>
-                                                <exclude>com.amazonaws.auth.EnvironmentVariableCredentialsProvider</exclude>
-                                                <exclude>com.amazonaws.auth.SystemPropertiesCredentialsProvider</exclude>
-                                                <exclude>com.amazonaws.auth.EC2ContainerCredentialsProviderWrapper</exclude>
+                                                <exclude>com.amazonaws.auth.EnvironmentVariableCredentialsProvider
+                                                </exclude>
+                                                <exclude>com.amazonaws.auth.SystemPropertiesCredentialsProvider
+                                                </exclude>
+                                                <exclude>com.amazonaws.auth.EC2ContainerCredentialsProviderWrapper
+                                                </exclude>
                                                 <exclude>com.amazonaws.auth.PropertiesFileCredentialsProvider</exclude>
                                                 <exclude>com.amazonaws.auth.ContainerCredentialsProvider</exclude>
-                                                <exclude>com.amazonaws.auth.profile.internal.ProfileAssumeRoleCredentialsProvider</exclude>
-                                                <exclude>com.amazonaws.auth.profile.internal.ProfileStaticCredentialsProvider</exclude>
-                                                <exclude>com.amazonaws.auth.profile.internal.securitytoken.STSProfileCredentialsServiceProvider</exclude>
+                                                <exclude>
+                                                    com.amazonaws.auth.profile.internal.ProfileAssumeRoleCredentialsProvider
+                                                </exclude>
+                                                <exclude>
+                                                    com.amazonaws.auth.profile.internal.ProfileStaticCredentialsProvider
+                                                </exclude>
+                                                <exclude>
+                                                    com.amazonaws.auth.profile.internal.securitytoken.STSProfileCredentialsServiceProvider
+                                                </exclude>
                                                 <exclude>com.amazonaws.auth.profile.ProfileCredentialsProvider</exclude>
                                                 <exclude>com.amazonaws.auth.*CredentialsFetcher</exclude>
 
@@ -339,7 +383,8 @@
                                         </relocation>
                                         <relocation>
                                             <pattern>org.apache.commons.codec</pattern>
-                                            <shadedPattern>com.github.vfss3.shaded.org.apache.commons.codec</shadedPattern>
+                                            <shadedPattern>com.github.vfss3.shaded.org.apache.commons.codec
+                                            </shadedPattern>
                                         </relocation>
                                         <relocation>
                                             <pattern>org.joda</pattern>
